--- a/src/main/resources/templates/error/index.html
+++ b/src/main/resources/templates/error/index.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="row mt-3 mb-3 justify-content-end">
 			<div class="col-2 ">
-				<a class="btn btn-success" th:text="#{ERROR.BUTTON.HOME}" th:href="@{/home/}">ホーム画面</a>
+				<a class="btn btn-success" th:text="#{ERROR.BUTTON.HOME}" th:href="@{/targetlists/index}">一覧画面</a>
 			</div>
 		</div>
 	</div>
