--- a/src/main/resources/templates/U02-01/index.html
+++ b/src/main/resources/templates/U02-01/index.html
@@ -87,6 +87,8 @@
 			$("#kbn").val(kbn);
 			$("#showTargetList").val(targetJson);
 			$("#showStepList").val(stepJson);
+			console.log(targetJson)
+			console.log(stepJson)
 			
 			//確認メッセージを表示
 			if(window.confirm(/*[[#{U0201.CONFIRM001}]]*/)) {
